--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-intl-currency-input": "^0.1.9",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
