--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "qs": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
