--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "qs": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-intl-currency-input": "^0.1.9",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
